// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getContract given: a 2-level subclass of DomainEntity when: the contract is requested then: the json-schema output (2-level subclass form) matches snapshot 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "name": {
      "type": "string",
    },
    "shellPattern": {
      "type": "string",
    },
    "uuid": {
      "type": "string",
    },
  },
  "required": [
    "name",
    "shellPattern",
  ],
  "type": "object",
  "x-domain-object": {
    "kind": "entity",
    "name": "GreenSeaturtle",
    "primary": [
      "uuid",
    ],
  },
}
`;

exports[`getContract given: a DomainEntity whose static nested names a field its schema lacks when: the contract is requested then: it fails fast with a nested-key-absent-from-schema ConstraintError 1`] = `
"✋ ConstraintError: Rack.contract(): key 'board' is declared in \`static nested\` but absent from \`static schema\`. add 'board' to Rack's schema, or drop it from \`static nested\`

{
  "domainObject": "Rack",
  "declaredIn": "static nested",
  "key": "board"
}"
`;

exports[`getContract given: a DomainEntity with primary, unique, alias, and nested when: the contract is embedded as a field in a parent z.object then: the pragma survives on the nested field of the parent json-schema 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "surfboard": {
      "properties": {
        "rider": {
          "properties": {
            "name": {
              "type": "string",
            },
            "uuid": {
              "type": "string",
            },
          },
          "required": [
            "name",
          ],
          "type": "object",
        },
        "serialNumber": {
          "type": "string",
        },
        "uuid": {
          "type": "string",
        },
      },
      "required": [
        "serialNumber",
        "rider",
      ],
      "type": "object",
      "x-domain-object": {
        "alias": {
          "plural": "surfboards",
          "singular": "surfboard",
        },
        "kind": "entity",
        "name": "SeaturtleSurfboard",
        "nested": {
          "rider": "Seaturtle",
        },
        "primary": [
          "uuid",
        ],
        "unique": [
          "serialNumber",
        ],
      },
    },
  },
  "required": [
    "surfboard",
  ],
  "type": "object",
}
`;

exports[`getContract given: a DomainEntity with primary, unique, alias, and nested when: the contract is requested via getContract then: the json-schema output matches snapshot 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "rider": {
      "properties": {
        "name": {
          "type": "string",
        },
        "uuid": {
          "type": "string",
        },
      },
      "required": [
        "name",
      ],
      "type": "object",
    },
    "serialNumber": {
      "type": "string",
    },
    "uuid": {
      "type": "string",
    },
  },
  "required": [
    "serialNumber",
    "rider",
  ],
  "type": "object",
  "x-domain-object": {
    "alias": {
      "plural": "surfboards",
      "singular": "surfboard",
    },
    "kind": "entity",
    "name": "SeaturtleSurfboard",
    "nested": {
      "rider": "Seaturtle",
    },
    "primary": [
      "uuid",
    ],
    "unique": [
      "serialNumber",
    ],
  },
}
`;

exports[`getContract given: a DomainEntity without a static primary when: the contract is requested then: the json-schema output (entity without primary form) matches snapshot 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "depth": {
      "type": "number",
    },
    "name": {
      "type": "string",
    },
  },
  "required": [
    "name",
    "depth",
  ],
  "type": "object",
  "x-domain-object": {
    "kind": "entity",
    "name": "Tidepool",
    "unique": [
      "name",
    ],
  },
}
`;

exports[`getContract given: a DomainEvent when: the contract is requested then: the json-schema output (event kind form) matches snapshot 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "height": {
      "type": "number",
    },
    "occurredAt": {
      "type": "string",
    },
    "sensorUuid": {
      "type": "string",
    },
  },
  "required": [
    "sensorUuid",
    "height",
    "occurredAt",
  ],
  "type": "object",
  "x-domain-object": {
    "kind": "event",
    "name": "WaveObservedEvent",
    "unique": [
      "sensorUuid",
      "occurredAt",
    ],
  },
}
`;

exports[`getContract given: a DomainLiteral with a primary but no unique/alias/nested when: the contract is requested then: the json-schema output (primary-only form) matches snapshot 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "latitude": {
      "type": "number",
    },
    "longitude": {
      "type": "number",
    },
    "uuid": {
      "type": "string",
    },
  },
  "required": [
    "latitude",
    "longitude",
  ],
  "type": "object",
  "x-domain-object": {
    "kind": "literal",
    "name": "Sandbar",
    "primary": [
      "uuid",
    ],
  },
}
`;

exports[`getContract given: a DomainObject that declares static nested atop a NON-object schema when: the contract is requested then: it fails fast with a requires-object-schema ConstraintError 1`] = `
"✋ ConstraintError: Chant.contract() requires an object schema (z.object); a contract coerces the wire payload into a Chant instance, and a domain object is a record of named props — a scalar or array schema carries none, so the construct would yield an instance of indexed characters rather than fail. declare Chant's schema as a z.object (wrap a scalar as z.object({ value: … }) if Chant genuinely models one)

{
  "domainObject": "Chant"
}"
`;

exports[`getContract given: a DomainObject whose schema is joi, not zod when: the contract is requested then: it fails fast with a ConstraintError 1`] = `
"✋ ConstraintError: JoiSandbar.contract() requires a zod schema; joi/yup cannot carry json-schema identity. keep .schema for validation, but .contract() needs zod

{
  "domainObject": "JoiSandbar"
}"
`;

exports[`getContract given: a DomainObject whose schema is yup, not zod when: the contract is requested then: it fails fast with a ConstraintError 1`] = `
"✋ ConstraintError: YupSandbar.contract() requires a zod schema; joi/yup cannot carry json-schema identity. keep .schema for validation, but .contract() needs zod

{
  "domainObject": "YupSandbar"
}"
`;

exports[`getContract given: a DomainObject whose static schema is a SCALAR, not an object when: the contract is requested then: it fails fast with a requires-object-schema ConstraintError 1`] = `
"✋ ConstraintError: Fin.contract() requires an object schema (z.object); a contract coerces the wire payload into a Fin instance, and a domain object is a record of named props — a scalar or array schema carries none, so the construct would yield an instance of indexed characters rather than fail. declare Fin's schema as a z.object (wrap a scalar as z.object({ value: … }) if Fin genuinely models one)

{
  "domainObject": "Fin"
}"
`;

exports[`getContract given: a DomainObject with no schema declared when: the contract is requested then: it fails fast with a ConstraintError 1`] = `
"✋ ConstraintError: Driftwood.contract() requires a static schema. either declare \`static schema\` (zod) on Driftwood to use .contract() — or, if this call is a SELF-REFERENCE from inside Driftwood's own \`static schema\` initializer (a tree-shaped dobj), the field is not assigned yet at that moment: defer it with \`z.lazy(() => Driftwood.contract())\`

{
  "domainObject": "Driftwood"
}"
`;

exports[`getContract given: a DomainObject with polymorphic (array) nested choices when: the contract is requested then: the json-schema output (array nested form) matches snapshot 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "surfer": {
      "properties": {
        "ref": {
          "type": "string",
        },
      },
      "required": [
        "ref",
      ],
      "type": "object",
    },
    "uuid": {
      "type": "string",
    },
  },
  "required": [
    "surfer",
  ],
  "type": "object",
  "x-domain-object": {
    "kind": "entity",
    "name": "Wave",
    "nested": {
      "surfer": [
        "Seaturtle",
        "Dolphin",
      ],
    },
    "primary": [
      "uuid",
    ],
  },
}
`;

exports[`getContract given: a plain DomainObject with a schema and alias but no keys when: the contract is requested then: the json-schema output (string alias form) matches snapshot 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "bubbles": {
      "type": "number",
    },
  },
  "required": [
    "bubbles",
  ],
  "type": "object",
  "x-domain-object": {
    "alias": "foam",
    "kind": "object",
    "name": "Seafoam",
  },
}
`;
